fix design overflow, link pagination, change attachment type, handle attachment selection

--- a/src/app/components/claim-attachments-management/claim-attachments-management.component.css
+++ b/src/app/components/claim-attachments-management/claim-attachments-management.component.css
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-rows: auto 1fr auto;
     padding: 15px;
+    z-index: 1;
 }
 
 header {
@@ -27,6 +28,7 @@ main {
 
 section {
     background-color: #F0EEEE;
+    overflow: auto;
 }
 
 .leftSection {
@@ -60,7 +62,7 @@ thead {
     color: #3D6AAF;
 }
 
-section tbody tr {
+.leftSection tbody tr {
     cursor: pointer;
 }
 
@@ -89,7 +91,6 @@ footer {
     position: relative;
     bottom: 40vh;
     right: 0px;
-    z-index: 1;
     display: grid;
     grid-template-columns: repeat(230, 1fr);
     padding: 15px;
@@ -102,6 +103,7 @@ footer {
     background-color: #7EEA8B;
     color: white;
     box-shadow: 0 0 0 3pt white;
+    z-index: 1;
 }
 
 .moveToRightButton {
@@ -110,6 +112,7 @@ footer {
     background-color: #C24040;
     color: white;
     box-shadow: 0 0 0 3pt white;
+    z-index: 1;
 }
 
 button:focus {
